--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ authors = ["stefanjwojcik <swojcik@pewresearch.org>"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
