--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,33 @@
 language: julia
+os:
+  - linux
+  - osx
+julia:
+  - 1.0
+  - nightly
+notifications:
+  email: false
+git:
+  depth: 99999999
+
+matrix:
+  allow_failures:
+    - julia: nightly
+
+addons:
+  apt: # apt-get for linux
+    packages:
+      - hdf5-tools
+
+jobs:
+  include:
+    - stage: deploy
+      julia: 1.0
+      os: linux
+      script:
+        - julia -e 'import Pkg; Pkg.clone(pwd()); Pkg.build("Ca")'
+        - julia -e 'import Pkg; ps=Pkg.PackageSpec(name="Documenter", version="0.19"); Pkg.add(ps); Pkg.pin(ps)'
+        - julia -e 'import Ca; ENV["DOCUMENTER_DEBUG"] = "true"; include(joinpath("docs","make.jl"))'
+
+after_success:
+- julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
